Organized images in images folder

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
         </div>
       </div>
     </section>
+<img src="hi.jpg" alt="My Photo">
+<img src="paper.jpg" alt="Paper Image">
+<img src="Screenshot 2025-12-06 014346.jpg" alt="Screenshot 1">
 
     <!-- ACHIEVEMENTS -->
     <section id="achievements" class="section">
